[nova] cell-update and minor fixups

--- a/openstack/nova/templates/bin-configmap.yaml
+++ b/openstack/nova/templates/bin-configmap.yaml
@@ -12,4 +12,7 @@ data:
 {{ include "common.sh" .| indent 4 }}
   db-migrate: |
 {{ include (print .Template.BasePath "/bin/_db-migrate.tpl") . | indent 4 }}
-
+  db-online-migrate: |
+{{ include (print .Template.BasePath "/bin/_db-online-migrate.tpl") . | indent 4 }}
+  db-update-cells: |
+{{ include (print .Template.BasePath "/bin/_db-update-cells.tpl") . | indent 4 }}
