--- a/openstack/nova/templates/update-cells-job.yaml
+++ b/openstack/nova/templates/update-cells-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: nova-online-migration
+  name: nova-update-cells
   labels:
     system: openstack
     type: configuration
@@ -14,20 +14,20 @@ spec:
     spec:
       restartPolicy: OnFailure
       containers:
-        - name: nova-migration
+        - name: nova-update-cells
           image: {{ tuple . "api" | include "container_image_nova" }}
           imagePullPolicy: IfNotPresent
           command:
             - kubernetes-entrypoint
           env:
             - name: COMMAND
-              value: "/container.init/db-online-migrate"
+              value: "/container.init/db-update-cells"
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
             - name: DEPENDENCY_JOBS
               value: "nova-migration"
             - name: DEPENDENCY_SERVICE
-              value: "nova-postgresql"
+              value: "nova-postgresql,nova-rabbitmq"
             - name: PGAPPNAME
               valueFrom:
                 fieldRef:
