--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -14,11 +14,12 @@ global:
       admin_users: "admin_user"
       autodb_idle_timeout: 3600
       max_client_conn: 16384
-      reserve_pool_size: 4
+      reserve_pool_size: 100
       min_pool_size: 1
-      default_pool_size: 4
-      max_db_connections: 8
+      default_pool_size: 50 # per user and database
+      max_db_connections: 50
       server_idle_timeout: 10
+      idle_transaction_timeout: 60
       server_check_delay: 30
       unix_socket_dir: "/tmp"
       listen_addr: "0.0.0.0"
@@ -51,6 +52,17 @@ image: "postgres"
 ## ref: https://hub.docker.com/r/library/postgres/tags/
 ##
 imageTag: "9.5.4"
+
+# max_connections > 3 pgbouncer * default_pool_size * reserve_pool_size
+max_connections: 500
+shared_buffers: '4GB'
+temp_buffers: '32MB'
+work_mem: '64MB'
+maintenance_work_mem: '256MB'
+max_stack_depth: '8MB'
+effective_cache_size: '16GB'
+autovacuum_analyze_scale_factor: '0.02'
+autovacuum_vacuum_scale_factor: '0.01'
 
 ## Specify a imagePullPolicy
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
