--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -63,6 +63,8 @@ max_stack_depth: '8MB'
 effective_cache_size: '16GB'
 autovacuum_analyze_scale_factor: '0.02'
 autovacuum_vacuum_scale_factor: '0.01'
+# SSD
+random_page_cost: '1.1'
 
 ## Specify a imagePullPolicy
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
