[nova] Set conductor termination grace period

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -42,6 +42,7 @@ defaults:
       default:
         reserved_host_memory_mb: 0
         compute_driver: ironic.IronicDriver
+        graceful_shutdown_timeout: 1800
       ironic:
         serial_console_state_timeout: 10
     kvm:
