[nova] Set termination grace period to oslo.service default value
Still a configuration value, in case we tranport it down to the config file(s)

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -31,6 +31,8 @@ osprofiler: {}
 auto_assign_aggregates: 'dry_run'
 
 defaults:
+  default:
+    graceful_shutdown_timeout: 60
   hypervisor:
     common:
       default:
