--- a/openstack/nova/templates/api-deployment.yaml
+++ b/openstack/nova/templates/api-deployment.yaml
@@ -32,6 +32,7 @@ spec:
             {{ tuple . "nova" "api" | include "kubernetes_pod_anti_affinity" }}
 {{- end }}
     spec:
+      terminationGracePeriodSeconds: {{ .Values.defaults.default.graceful_shutdown_timeout | add 5 }}
 {{- if .Values.pod.debug.api }}
       securityContext:
         runAsUser: 0
