--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -16,8 +16,8 @@ global:
       max_client_conn: 16384
       reserve_pool_size: 100
       min_pool_size: 1
-      default_pool_size: 100 # per user and database
-      max_db_connections: 50
+      default_pool_size: 50 # per user and database
+      max_db_connections: 83 # max_connections / dbs / pgbouncers
       server_idle_timeout: 10
       idle_transaction_timeout: 60
       server_check_delay: 30
