[ironic] Change liveness probe path to avoid redirect

--- a/openstack/ironic/templates/pxe-deployment.yaml
+++ b/openstack/ironic/templates/pxe-deployment.yaml
@@ -54,7 +54,7 @@ spec:
           name: ironic-pxe
         livenessProbe:
           httpGet:
-            path: /tftpboot
+            path: /tftpboot/
             port: ironic-ipxe
           initialDelaySeconds: 5
           periodSeconds: 3
