--- a/global/prometheus-alertmanager/values.yaml
+++ b/global/prometheus-alertmanager/values.yaml
@@ -26,7 +26,11 @@ cluster:
 
 slack:
   webhook_url: DEFINED-IN-SECRETS
-  stargate_webhook_url: DEFINED-IN-SECRETS
+  # incoming webhooks in slack apps are bound to one channel
+  metal_critical_webhook_url: DEFINED-IN-SECRETS
+  openstack_critical_webhook_url: DEFINED-IN-SECRETS
+  kubernetes_critical_webhook_url: DEFINED-IN-SECRETS
+  kubernikus_critical_webhook_url: DEFINED-IN-SECRETS
 
 # pagerduty service keys defined in secrets
 pagerduty: {}
