[nova] reverted loci support

--- a/openstack/nova/templates/placement-api-deployment.yaml
+++ b/openstack/nova/templates/placement-api-deployment.yaml
@@ -38,7 +38,7 @@ spec:
 {{- end }}
       containers:
         - name: nova-placement
-          image: {{ tuple . "placement-api" | include "container_image_nova" }}
+          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-nova-placement-api:{{.Values.imageVersionNovaPlacementApi |  default .Values.imageVersionNova | default .Values.imageVersion | required "Please set nova.imageVersion or similar" }}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
