--- a/openstack/nova/templates/consoleauth-deployment.yaml
+++ b/openstack/nova/templates/consoleauth-deployment.yaml
@@ -38,7 +38,7 @@ spec:
           name: nova-etc
       containers:
       - name: nova-consoleauth
-        image: {{ tuple . "consoleauth" | include "container_image_nova" }}
+        image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-nova-consoleauth:{{.Values.imageVersionNovaConsoleauth |  default .Values.imageVersionNova | default .Values.imageVersion | required "Please set nova.imageVersion or similar" }}
         imagePullPolicy: IfNotPresent
         command:
         - dumb-init
