--- a/system/kube-monitoring/charts/ns-exporter/templates/daemonset.yaml
+++ b/system/kube-monitoring/charts/ns-exporter/templates/daemonset.yaml
@@ -44,7 +44,7 @@ spec:
             value: {{ .Values.projectDomainName }}
           - name: OS_PASSWORD
             valueFrom: { secretKeyRef:    { name: ns-exporter, key: password } }
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: exporter
         securityContext:
           privileged: true
