Tweaks novas postgres settings (to allow more connections)

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -390,8 +390,6 @@ postgresql:
   users:
     nova: {}
     nova_api: {}
-  pgbouncer:
-    enabled: true
   persistence:
     enabled: true
     existingClaim: db-nova-pvclaim
@@ -399,8 +397,26 @@ postgresql:
     enabled: true
     metrics: true
     os_password: null
+
+  max_connections: 500
+  shared_buffers: '4GB'
+  temp_buffers: '32MB'
+  work_mem: '64MB'
+  maintenance_work_mem: '256MB'
+  max_stack_depth: '8MB'
+  effective_cache_size: '16GB'
+  autovacuum_analyze_scale_factor: '0.02'
+  autovacuum_vacuum_scale_factor: '0.01'
+  random_page_cost: '1.1'
   shared_preload_libraries: pg_stat_statements
   track_activity_query_size: 2048
+  pgbouncer:
+    enabled: true
+    config:
+      max_db_connections: 83
+      default_pool_size: 50
+      reserve_pool_size: 100
+      idle_transaction_timeout: 60
 
 audit:
   enabled: false
