new syntax for snmp exporter

--- a/openstack/maia/templates/snmp-exporter-deployment.yaml
+++ b/openstack/maia/templates/snmp-exporter-deployment.yaml
@@ -38,7 +38,7 @@ spec:
           command:
             - /bin/snmp_exporter
           args:
-            - -config.file=/maia-etc/{{$config.name}}.yaml
+            - --config.file=/maia-etc/{{$config.name}}.yaml
           volumeMounts:
             - mountPath: /maia-etc
               name: maia-etc
