adding prometheus scrapes to maia

--- a/openstack/maia/templates/snmp-exporter-service.yaml
+++ b/openstack/maia/templates/snmp-exporter-service.yaml
@@ -16,6 +16,11 @@ metadata:
     maia.io/scrape_param_module: "{{$config.configname}}"
     maia.io/port: "{{$.Values.snmp_exporter.listen_port}}"
     maia.io/path: "/snmp"
+    prometheus.io/scrape: "true"
+    prometheus.io/scrape_param_target: "{{$config.target}}"
+    prometheus.io/scrape_param_module: "{{$config.configname}}"
+    prometheus.io/port: "{{$.Values.snmp_exporter.listen_port}}"
+    prometheus.io/path: "/snmp"
 
 spec:
   selector:
