--- a/common/mysql_metrics/values.yaml
+++ b/common/mysql_metrics/values.yaml
@@ -7,7 +7,10 @@ db_user: DEFINED-IN-COMPONENT-CHART
 db_password: null
 
 port_metrics: '9237'
+port_metrics_promexp: '9104'
 loglevel: info
 image: justwatch/sql_exporter
 imageTag: 0.2.0
+image_promexp: prom/mysqld-exporter
+imageTag_promexp: v0.11.0
 imagePullPolicy: IfNotPresent
