--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -138,6 +138,7 @@ data:
           - '{__name__=~"^scrape_duration_seconds"}'
           - '{__name__=~"^security_group_(max|total)_entanglement$"}'
           - '{__name__=~"^skydns_.+"}'
+          - '{__name__=~"^snmp_asr_.+"}'
           - '{__name__=~"^sql_openstack_.+"}'
           - '{__name__=~"^statsd_.+"}'
           - '{__name__=~"^swift_.+"}'
