[nova] use imageVersion instead imageVersionNova for detecting queens

--- a/openstack/nova/templates/placement-api-deployment.yaml
+++ b/openstack/nova/templates/placement-api-deployment.yaml
@@ -1,4 +1,4 @@
-{{- if hasPrefix "queens" .Values.imageVersionNova }}
+{{- if hasPrefix "queens" .Values.imageVersion }}
 kind: Deployment
 apiVersion: extensions/v1beta1
 
