--- a/openstack/nova/templates/update-cells-job.yaml
+++ b/openstack/nova/templates/update-cells-job.yaml
@@ -1,4 +1,4 @@
-{{- if hasPrefix "queens" .Values.imageVersionNova }}
+{{- if hasPrefix "queens" .Values.imageVersion }}
 apiVersion: batch/v1
 kind: Job
 metadata:
