--- a/openstack/nova/templates/db-maintain-configmap.yaml
+++ b/openstack/nova/templates/db-maintain-configmap.yaml
@@ -11,7 +11,8 @@ metadata:
 data:
   db-maintain.sql: |
     CREATE EXTENSION IF NOT EXISTS pg_stat_statements;
-    ALTER ROLE {{.Values.global.dbUser}} WITH ENCRYPTED PASSWORD '{{.Values.global.dbPassword}}';
-    ALTER ROLE {{.Values.apidbUser}} WITH ENCRYPTED PASSWORD '{{.Values.apidbPassword}}';
-    ALTER ROLE {{.Values.postgresql.user}} WITH ENCRYPTED PASSWORD '{{.Values.postgresql.postgresPassword}}';
+    ALTER ROLE {{ default .Values.dbUser .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ .Values.dbPassword | default (include "postgres.password_for_user" . (default .Values.dbUser .Values.global.dbUser)) }}';
+    ALTER ROLE {{.Values.apidbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.apidbPassword | default (include "postgres.password_for_user" . .Values.apidbUser) }}';
+    ALTER ROLE {{.Values.cell0dbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.cell0dbPassword | default (include "postgres.password_for_user" . .Values.cell0dbUser) }}';
+    ALTER ROLE {{.Values.postgresql.user}} WITH ENCRYPTED PASSWORD '{{ .Values.postgresql.postgresPassword  | default (include "postgres.password_for_user" . .Values.postgresql.user) }}';
 {{ end }}
