--- a/openstack/nova/templates/db-maintain-configmap.yaml
+++ b/openstack/nova/templates/db-maintain-configmap.yaml
@@ -11,8 +11,8 @@ metadata:
 data:
   db-maintain.sql: |
     CREATE EXTENSION IF NOT EXISTS pg_stat_statements;
-    ALTER ROLE {{ default .Values.dbUser .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ .Values.dbPassword | default (include "postgres.password_for_user" . (default .Values.dbUser .Values.global.dbUser)) }}';
-    ALTER ROLE {{.Values.apidbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.apidbPassword | default (include "postgres.password_for_user" . .Values.apidbUser) }}';
-    ALTER ROLE {{.Values.cell0dbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.cell0dbPassword | default (include "postgres.password_for_user" . .Values.cell0dbUser) }}';
-    ALTER ROLE {{.Values.postgresql.user}} WITH ENCRYPTED PASSWORD '{{ .Values.postgresql.postgresPassword  | default (include "postgres.password_for_user" . .Values.postgresql.user) }}';
+    ALTER ROLE {{ default .Values.dbUser .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ .Values.dbPassword | default (tuple . (default .Values.dbUser .Values.global.dbUser) | include "postgres.password_for_user" ) }}';
+    ALTER ROLE {{.Values.apidbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.apidbPassword | default (tuple . .Values.apidbUser | include "postgres.password_for_user" ) }}';
+    ALTER ROLE {{.Values.cell0dbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.cell0dbPassword | default (tuple . .Values.cell0dbUser | include "postgres.password_for_user" ) }}';
+    ALTER ROLE {{.Values.postgresql.user}} WITH ENCRYPTED PASSWORD '{{ .Values.postgresql.postgresPassword  | default (tuple . .Values.postgresql.user | include "postgres.password_for_user") }}';
 {{ end }}
