--- a/openstack/nova/templates/db-init-configmap.yaml
+++ b/openstack/nova/templates/db-init-configmap.yaml
@@ -11,7 +11,7 @@ metadata:
 data:
   db-init.sql: |
     CREATE DATABASE {{.Values.dbName}};
-    CREATE ROLE {{default .Values.dbUser .Values.global.dbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.dbPassword | default (tuple . (default .Values.dbUser .Values.global.dbUser) | include "postgres.password_for_user" ) }}' LOGIN;
+    CREATE ROLE {{default .Values.dbUser .Values.global.dbUser}} WITH ENCRYPTED PASSWORD '{{ default .Values.dbPassword .Values.global.dbPassword | default (tuple . (default .Values.dbUser .Values.global.dbUser) | include "postgres.password_for_user" ) }}' LOGIN;
     GRANT ALL PRIVILEGES ON DATABASE {{.Values.dbName}} TO {{.Values.dbUser}};
 
     CREATE DATABASE {{.Values.apidbName}};
