--- a/openstack/nova/templates/db-maintain-configmap.yaml
+++ b/openstack/nova/templates/db-maintain-configmap.yaml
@@ -11,7 +11,7 @@ metadata:
 data:
   db-maintain.sql: |
     CREATE EXTENSION IF NOT EXISTS pg_stat_statements;
-    ALTER ROLE {{ default .Values.dbUser .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ .Values.dbPassword | default (tuple . (default .Values.dbUser .Values.global.dbUser) | include "postgres.password_for_user" ) }}';
+    ALTER ROLE {{ default .Values.dbUser .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ default .Values.dbPassword .Values.global.dbPassword | default (tuple . (default .Values.dbUser .Values.global.dbUser) | include "postgres.password_for_user" ) }}';
     ALTER ROLE {{.Values.apidbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.apidbPassword | default (tuple . .Values.apidbUser | include "postgres.password_for_user" ) }}';
     ALTER ROLE {{.Values.cell0dbUser}} WITH ENCRYPTED PASSWORD '{{ .Values.cell0dbPassword | default (tuple . .Values.cell0dbUser | include "postgres.password_for_user" ) }}';
     ALTER ROLE {{.Values.postgresql.user}} WITH ENCRYPTED PASSWORD '{{ .Values.postgresql.postgresPassword  | default (tuple . .Values.postgresql.user | include "postgres.password_for_user") }}';
