[nova] enable placement with queens (Seeds and service)

--- a/openstack/nova/templates/placement-ingress.yaml
+++ b/openstack/nova/templates/placement-ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.placement.enabled }}
+{{- if hasPrefix "queens" .Values.imageVersion }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 
