--- a/openstack/nova/templates/seeds.yaml
+++ b/openstack/nova/templates/seeds.yaml
@@ -50,7 +50,7 @@ spec:
     - interface: public
       region: '{{ .Values.global.region }}'
       url: 'https://{{include "nova_api_endpoint_host_public" .}}:{{.Values.global.novaApiPortPublic}}/v2/%(tenant_id)s'
-{{- if .Values.placement.enabled }}
+{{- if hasPrefix "queens" .Values.imageVersion }}
   - name: placement
     type: placement
     description: Openstack Placement API
@@ -90,7 +90,7 @@ spec:
     - name: nova_nanny{{ .Values.global.user_suffix | default "" }}
       description: Nova Nanny
       password: {{ tuple . "nova_nanny" | include "identity.password_for_user" | quote }}
-{{- if .Values.placement.enabled }}
+{{- if hasPrefix "queens" .Values.imageVersion }}
     - name: placement
       description: Placement API Service User
       password: {{ .Values.global.placement_service_password | default (tuple . .Values.global.placement_service_user | include "identity.password_for_user") | quote }}
