add CORS support to Limes

--- a/openstack/limes/templates/configmap.yaml
+++ b/openstack/limes/templates/configmap.yaml
@@ -16,6 +16,8 @@ data:
       policy: /etc/limes/policy.json
       request_log:
         except_status_codes: [300]
+      cors:
+        allowed_origins: [ "https://dashboard.{{.Values.global.region}}.{{.Values.global.tld}}" ]
 
     collector:
       metrics: :8080
