[nova] adds dbUser to globals. Fixes issue with pgmetrics using the default dbuser

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -12,6 +12,8 @@ global:
   placementApiPortInternal: '8778'
   placementApiPortPublic: '443'
   master_password: null
+  
+  dbUser: nova
 
   nova_service_user: nova
   placement_service_user: placement
