[nova] Add metric for compute service versions

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -409,6 +409,21 @@ pgmetrics:
          - running_vms_gauge:
              usage: "GAUGE"
              description: "Number of VMs running"
+     openstack_compute_service:
+       query: 'select id, host, "binary", version from services where deleted_at is null'
+       metrics:
+       - id:
+           usage: "LABEL"
+           description: "ID of the service"
+       - host:
+           usage: "LABEL"
+           description: "Name of the host"
+       - binary:
+           usage: "LABEL"
+           description: "Name of the executable"
+       - version:
+           usage: "GAUGE"
+           description: "Version of the service running"
 
 
 postgresql:
