[nova] Set host in config instead on relying on the hostname

--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
@@ -19,6 +19,7 @@ template: |
   data:
     nova-compute.conf: |
       [DEFAULT]
+      host = nova-compute-{= name =}
       graceful_shutdown_timeout = 900
       compute_driver = vmwareapi.VMwareVCDriver
       reserved_host_memory_mb = 0
