[hermes] add prom alerts, channel specific setup

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -78,7 +78,7 @@ data:
         match_re:
           tier: os
           severity: info|warning|critical
-          service: arc|backup|barbican|cinder|cfm|designate|elektra|elk|ironic|keystone|limes|lyra|maia|manila|neutron|nova|sentry|swift
+          service: arc|backup|barbican|cinder|cfm|designate|elektra|elk|hermes|ironic|keystone|limes|lyra|maia|manila|neutron|nova|sentry|swift
 
       - receiver: slack_by_tier
         continue: true
