--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -159,3 +159,30 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+    name: "m5.16xlarge"
+    id: "220"
+    vcpus: "64"
+    ram: "262128"
+    disk: "64"
+    is_public: True
+     extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+    name: "m5.32xlarge"
+    id: "230"
+    vcpus: "128"
+    ram: "524272"
+    disk: "64"
+    is_public: True
+     extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+    name: "m5.64xlarge"
+    id: "240"
+    vcpus: "256"
+    ram: "1048560"
+    disk: "64"
+    is_public: True
+     extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
