--- a/common/mysql_metrics/templates/deployment-promexp.yaml
+++ b/common/mysql_metrics/templates/deployment-promexp.yaml
@@ -28,6 +28,20 @@ spec:
       - name: promexp-metrics
         image: "{{ .Values.image_promexp }}:{{ .Values.imageTag_promexp }}"
         imagePullPolicy: {{ default "IfNotPresent" .Values.imagePullPolicy | quote }}
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 9104
+            scheme: HTTP
+          periodSeconds: 20
+          timeoutSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 9104
+            scheme: HTTP
+          periodSeconds: 20
+          timeoutSeconds: 10
         env:
           - name: DATA_SOURCE_NAME
             value: "{{ .Values.db_user }}:{{ .Values.db_password }}@tcp({{ include (print .Release.Name "_db_host") . }}:3306)/{{ .Values.db_name }}"
