[prometheus-frontend] added some of the mysql/mariadb metrics

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -140,6 +140,8 @@ data:
           - '{__name__=~"^skydns_.+"}'
           - '{__name__=~"^snmp_asr_.+"}'
           - '{__name__=~"^sql_openstack_.+"}'
+          - '{__name__=~"^mysql_global_status_.+"}'
+          - '{__name__=~"^mysql_global_variables_.+"}'
           - '{__name__=~"^statsd_.+"}'
           - '{__name__=~"^swift_.+"}'
           - '{__name__=~"^unbound_.+"}'
