--- a/common/mysql_metrics/templates/deployment-promexp.yaml
+++ b/common/mysql_metrics/templates/deployment-promexp.yaml
@@ -44,7 +44,7 @@ spec:
           timeoutSeconds: 10
         env:
           - name: DATA_SOURCE_NAME
-            value: "{{ .Values.db_user }}:{{ .Values.db_password }}@tcp({{ include (print .Release.Name "_db_host") . }}:3306)/{{ .Values.db_name }}"
+            value: "{{ .Values.db_user }}:{{ .Values.db_password }}@tcp({{ include (print .Release.Name "_db_host") . }}:3306)/"
         ports:
           - name: metrics
             containerPort: {{ .Values.port_metrics_promexp }}
