[mysql_exporter] specify args

--- a/common/mysql_metrics/templates/deployment-promexp.yaml
+++ b/common/mysql_metrics/templates/deployment-promexp.yaml
@@ -28,6 +28,9 @@ spec:
       - name: promexp-metrics
         image: "{{ .Values.image_promexp }}:{{ .Values.imageTag_promexp }}"
         imagePullPolicy: {{ default "IfNotPresent" .Values.imagePullPolicy | quote }}
+        args:
+          - "-collect.binlog_size=true"
+          - "-collect.info_schema.processlist=true"
         livenessProbe:
           httpGet:
             path: /
