[mysql_exporter] fix arguments

--- a/common/mysql_metrics/templates/deployment-promexp.yaml
+++ b/common/mysql_metrics/templates/deployment-promexp.yaml
@@ -29,8 +29,8 @@ spec:
         image: "{{ .Values.image_promexp }}:{{ .Values.imageTag_promexp }}"
         imagePullPolicy: {{ default "IfNotPresent" .Values.imagePullPolicy | quote }}
         args:
-          - "-collect.binlog_size=true"
-          - "-collect.info_schema.processlist=true"
+          - "--collect.binlog_size"
+          - "--collect.info_schema.processlist"
         livenessProbe:
           httpGet:
             path: /
