[keystone] added PodDisruptionBudget

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -122,7 +122,6 @@ api:
 
   terminationGracePeriodSeconds: 30
   minReadySeconds: 5
-  replicas: 2
 
   resources:
     enabled: false
@@ -134,12 +133,17 @@ api:
       memory: "1024Mi"
       cpu: "2000m"
 
+  replicas: 3
+
   upgrades:
     revisionHistory: 3
     podReplacementStrategy: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 1
+
+  pdb:
+    minAvailable: 1
 
 cron:
   image: "monsoon/loci-keystone"
