--- a/system/kube-monitoring/charts/ns-exporter/templates/daemonset.yaml
+++ b/system/kube-monitoring/charts/ns-exporter/templates/daemonset.yaml
@@ -27,6 +27,7 @@ spec:
       - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         args:
           - -concurrency={{ default 1  .Values.concurrency }}
+          - -interval={{ default "1m" .Values.interval }}
         ports:
         - containerPort: 9191
           name: metrics
