--- a/system/kube-monitoring/charts/ns-exporter/values.yaml
+++ b/system/kube-monitoring/charts/ns-exporter/values.yaml
@@ -1,8 +1,9 @@
 image:
   repository: hub.global.cloud.sap/monsoon/ns-exporter
-  tag: v0.1.5
+  tag: v0.2.1
 
-concurrency: 1
+concurrency: 5
+interval: "50s"
 
 #authURL:
 username: ns-exporter
