[Cinder][Backup] Adding cinder backup-deployment feature

--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -30,11 +30,13 @@ imageVersion: null
 imageVersionCinderApi: null
 imageVersionCinderScheduler: null
 imageVersionCinderVolume: null
+imageVersionCinderVolumeBackup: null
 
 pod:
   replicas:
     api: 2
     scheduler: 1
+    backup: 1
   lifecycle:
     upgrades:
       deployments:
@@ -86,7 +88,7 @@ pgmetrics:
             description: "Volume ID"
         - display_name:
             usage: "LABEL"
-            description: "Name of the volume"           
+            description: "Name of the volume"
         - count_gauge:
             usage: "GAUGE"
             description: "Number of volumes"
