--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -142,6 +142,7 @@ data:
           - '{__name__=~"^sql_openstack_.+"}'
           - '{__name__=~"^mysql_global_status_.+"}'
           - '{__name__=~"^mysql_global_variables_.+"}'
+          - '{__name__=~"^mysql_info_.+"}'
           - '{__name__=~"^statsd_.+"}'
           - '{__name__=~"^swift_.+"}'
           - '{__name__=~"^unbound_.+"}'
