hermes: new var for es storage

--- a/openstack/hermes/templates/elasticsearch-pvclaim.yaml
+++ b/openstack/hermes/templates/elasticsearch-pvclaim.yaml
@@ -10,5 +10,4 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      # size storage so that the retention kicks in at 70% of capacity consumption
-      storage: {{ div (mul .Values.hermes_elasticsearch_data_retention 100) 70 -}}Gi
+      storage: {{.Values.hermes_elasticsearch_data_volumesize}}
