Revert "hermes: new var for es storage"
This reverts commit 0e797d05df6e969323f382abff6dbba41bef2491.
In an incident and don't want to over complicate it. Will move to branch

--- a/openstack/hermes/templates/elasticsearch-pvclaim.yaml
+++ b/openstack/hermes/templates/elasticsearch-pvclaim.yaml
@@ -10,4 +10,5 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: {{.Values.hermes_elasticsearch_data_volumesize}}
+      # size storage so that the retention kicks in at 70% of capacity consumption
+      storage: {{ div (mul .Values.hermes_elasticsearch_data_retention 100) 70 -}}Gi
