[ironic] Filter out empty resource-classes

--- a/openstack/ironic/templates/quota-classes-kq.yaml
+++ b/openstack/ironic/templates/quota-classes-kq.yaml
@@ -9,7 +9,9 @@ requirements:
   kind: OpenstackSeed
 context: ironic@Default/service
 python: |
-    resource_classes = set(node.resource_class for node in os.baremetal.nodes(fields='resource_class'))
+    resource_classes = set(node.resource_class
+                           for node in os.baremetal.nodes(fields='resource_class')
+                           if node.resource_class)
 
     quotas = {'instances_{}'.format(r): 0 for r in resource_classes}
 
