--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -164,7 +164,7 @@ spec:
     vcpus: "64"
     ram: "262128"
     disk: "64"
-    is_public: True
+    is_public: true
      extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
@@ -173,7 +173,7 @@ spec:
     vcpus: "128"
     ram: "524272"
     disk: "64"
-    is_public: True
+    is_public: true
      extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
@@ -182,7 +182,7 @@ spec:
     vcpus: "256"
     ram: "1048560"
     disk: "64"
-    is_public: True
+    is_public: true
      extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
