--- a/system/kube-monitoring/charts/ns-exporter/values.yaml
+++ b/system/kube-monitoring/charts/ns-exporter/values.yaml
@@ -1,9 +1,9 @@
 image:
   repository: hub.global.cloud.sap/monsoon/ns-exporter
-  tag: v0.2.1
+  tag: v0.3.0
 
-concurrency: 5
-interval: "50s"
+concurrency: 1
+interval: "1m"
 
 #authURL:
 username: ns-exporter
